# tps6699x

./: AGENTS.md  Cargo.toml  README.md  deny.toml  device.yaml
.github/: copilot-instructions.md
.github/workflows/: check.yml
examples/rt685s-evk/: Cargo.toml
examples/rt685s-evk/.cargo/: config.toml
examples/rt685s-evk/src/: main.rs
src/: asynchronous.rs  command.rs  lib.rs  stream.rs
src/asynchronous/: embassy.rs  fw_update.rs
src/asynchronous/embassy/: fw_update.rs  interrupt.rs  mod.rs  rx_caps.rs  task.rs  ucsi.rs
src/asynchronous/internal/: command.rs  mod.rs
src/command/: gcdm.rs  mod.rs  muxr.rs  trig.rs  vdms.rs
src/odp/: driver.rs  fw_update.rs  mod.rs  service.rs
src/registers/: autonegotiate_sink.rs  boot_flags.rs  discovered_svids.rs  dp_status.rs  mod.rs  port_config.rs  received_sop_identity_data.rs  received_sop_prime_identity_data.rs  rx_caps.rs  rx_other_vdm.rs  rx_src_caps.rs  sx_app_config.rs  tx_identity.rs
supply-chain/: audits.toml  config.toml
