[package]
name = "tps6699x"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.88"

[dependencies]
bitfield = "0.19.0"
bitflags = { version = "2.8.0", optional = true }
embedded-io-async = "0.6.1"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-usb-pd = { git = "https://github.com/OpenDevicePartnership/embedded-usb-pd", tag = "v0.1.0", default-features = false }
# When updating `device-driver`, also update the version of device-driver-cli in the README and in the device-driver.yml workflow.
device-driver = { version = "1.0.9", default-features = false }
defmt = { version = "0.3.0", optional = true }
log = { version = "0.4.14", optional = true }
embassy-sync = { version = "0.8.0", optional = true }
embassy-time = { version = "0.5.0", optional = true }
bincode = { version = "2.0.0", default-features = false, features = ["derive"] }
heapless = { version = "0.9.2", optional = true }
itertools = { version = "0.14.0", default-features = false }
embedded-services = { git = "https://github.com/OpenDevicePartnership/embedded-services", optional = true }
type-c-interface = { git = "https://github.com/OpenDevicePartnership/embedded-services", optional = true }
fw-update-interface = { git = "https://github.com/OpenDevicePartnership/embedded-services", optional = true }
type-c-service = { git = "https://github.com/OpenDevicePartnership/embedded-services", optional = true }
power-policy-interface = { git = "https://github.com/OpenDevicePartnership/embedded-services", optional = true }

[features]
default = []
defmt = [
    "dep:defmt",
    "device-driver/defmt-03",
    "embassy-sync/defmt",
    "embassy-time?/defmt",
    "embassy-time?/defmt-timestamp-uptime",
    "embedded-usb-pd/defmt",
    "embedded-services?/defmt",
    "type-c-interface?/defmt",
    "fw-update-interface?/defmt",
    "type-c-service?/defmt",
]
embassy = ["dep:embassy-sync", "dep:embassy-time", "dep:heapless"]
log = ["dep:log"]

# Core embedded-services feature
odp-embedded-services = [
    "embassy",
    "dep:bitflags",
    "dep:type-c-interface",
    "dep:embedded-services",
    "dep:power-policy-interface",
]
# Enable fw-update-interface implementations
odp-fw-update-interface = ["odp-embedded-services", "dep:fw-update-interface"]
# Enable type-c-service implementations
odp-type-c-service = ["odp-embedded-services", "dep:type-c-service"]

[dev-dependencies]
critical-section = { version = "1.1", features = ["std"] }
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
embassy-time = { version = "0.5.0", features = ["std", "generic-queue-8"] }
tokio = { version = "1.42.0", features = ["rt", "macros", "time"] }
static_cell = "2.1.0"

[lints.clippy]
correctness = "deny"
expect_used = "deny"
indexing_slicing = "deny"
panic = "deny"
panic_in_result_fn = "deny"
perf = "deny"
suspicious = "deny"
style = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"
